Fix all text mistakes (#34)
* Fix text mistake in footer

* Update address of the "Voshod" branch of MAI

* Delete unnecessary mentions of MAI in card titles

* Update names of links in "money" manual

* Rename "manuals" page

--- a/manuals.html
+++ b/manuals.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <title>Справочники | mai_library — сборник материалов для маёвца</title>
+    <title>Справочник | mai_library — сборник материалов для маёвца</title>
     <link rel="stylesheet" href="./normalize.css"/>
     <link rel="stylesheet" href="./styles.css"/>
   </head>
@@ -24,7 +24,7 @@
             <a class="header__menu-link" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link header__menu-link--active" href="./manuals.html">Справочники</a>
+            <a class="header__menu-link header__menu-link--active" href="./manuals.html">Справочник</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="./self-education.html">Самообразование</a>
@@ -34,7 +34,7 @@
     </header>
     <main>
       <section class="about">
-        <h1 class="about__title">Справочники</h1>
+        <h1 class="about__title">Справочник</h1>
         <p class="about__content">Статьи для решения различных вопросов</p>
       </section>
       <section class="menu">
@@ -131,7 +131,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
