--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -24,7 +24,7 @@
             <a class="header__menu-link" href="../organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link header__menu-link--active" href="../manuals.html">Справочники</a>
+            <a class="header__menu-link header__menu-link--active" href="../manuals.html">Справочник</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="../self-education.html">Самообразование</a>
@@ -187,7 +187,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
