--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
             <a class="header__menu-link" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="./manuals.html">Справочники</a>
+            <a class="header__menu-link" href="./manuals.html">Справочник</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="./self-education.html">Самообразование</a>
@@ -100,7 +100,7 @@
                 <span class="card__type">бот</span>
               </div>
               <div class="card__text-wrapper">
-                <h3 class="card__title">Расписание МАИ v2.0</h3>
+                <h3 class="card__title">Расписание v2.0</h3>
                 <span class="card__description">Расписание занятий и план-схема кампуса</span>
               </div>
             </a>
@@ -123,7 +123,7 @@
                 <span class="card__type">бот</span>
               </div>
               <div class="card__text-wrapper">
-                <h3 class="card__title">Расписание МАИ</h3>
+                <h3 class="card__title">Расписание</h3>
                 <span class="card__description">Расписание занятий, отзывы на преподавателей, поиск свободной аудитории</span>
               </div>
             </a>
@@ -146,7 +146,7 @@
                 <span class="card__type">мини</span>
               </div>
               <div class="card__text-wrapper">
-                <h3 class="card__title">Расписание МАИ</h3>
+                <h3 class="card__title">Расписание</h3>
                 <span class="card__description">Расписание занятий</span>
               </div>
             </a>
@@ -201,7 +201,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
