--- a/manuals/money.html
+++ b/manuals/money.html
@@ -24,7 +24,7 @@
             <a class="header__menu-link" href="../organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link header__menu-link--active" href="../manuals.html">Справочники</a>
+            <a class="header__menu-link header__menu-link--active" href="../manuals.html">Справочник</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="../self-education.html">Самообразование</a>
@@ -44,9 +44,9 @@
             <div>
               <h3>Ресурсы</h3>
               <ul>
-                <li><a class="link" href="https://mai.ru/education/studies/scholarship">Страница №1 на сайте МАИ</a></li>
-                <li><a class="link" href="https://mai.ru/sveden/grants">Страница №2 на сайте МАИ</a></li>
-                <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Страница на сайте Госуслуг Москвы</a></li>
+                <li><a class="link" href="https://mai.ru/education/studies/scholarship">Подробно (1)</a></li>
+                <li><a class="link" href="https://mai.ru/sveden/grants">Подробно (2)</a></li>
+                <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Подробно (3)</a></li>
               </ul>
             </div>
             <div class="table-wrapper">
@@ -210,7 +210,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
