--- a/organizations.html
+++ b/organizations.html
@@ -24,7 +24,7 @@
             <a class="header__menu-link header__menu-link--active" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="./manuals.html">Справочники</a>
+            <a class="header__menu-link" href="./manuals.html">Справочник</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="./self-education.html">Самообразование</a>
@@ -127,7 +127,7 @@
               <div class="card__text-wrapper">
                 <h3 class="card__title">CONVERSATION CLUB</h3>
                 <span class="card__description">
-                  Для студентов МАИ, которые хотят говорить свободно на английском языке
+                  Для студентов, которые хотят говорить свободно на английском языке
                 </span>
               </div>
             </a>
@@ -152,7 +152,7 @@
               <div class="card__text-wrapper">
                 <h3 class="card__title">Учеба по обмену</h3>
                 <span class="card__description">
-                  Всё о программах академической мобильности, летних школах и стажировках за рубежом МАИ
+                  Всё о программах академической мобильности, летних школах и стажировках за рубежом
                 </span>
               </div>
             </a>
@@ -266,7 +266,7 @@
               </div>
               <div class="card__text-wrapper">
                 <h3 class="card__title">Шахматный клуб</h3>
-                <span class="card__description">Шахматное сообщество действующих и бывших студентов, преподавателей и сотрудников МАИ</span>
+                <span class="card__description">Шахматное сообщество действующих и бывших студентов, преподавателей и сотрудников</span>
               </div>
             </a>
           </article>
@@ -308,7 +308,7 @@
               </div>
               <div class="card__text-wrapper">
                 <h3 class="card__title">Студенческое научное общество</h3>
-                <span class="card__description">Объединение студентов МАИ, занимающихся развитием, популяризацией науки и вовлечением студентов в научную жизнь института</span>
+                <span class="card__description">Объединение студентов, занимающихся развитием, популяризацией науки и вовлечением студентов в научную жизнь института</span>
               </div>
             </a>
           </article>
@@ -1167,7 +1167,7 @@
               </div>
               <div class="card__text-wrapper">
                 <h3 class="card__title">Восход</h3>
-                <span class="card__description">город Байконур</span>
+                <span class="card__description">Республика Казахстан, город Байконур</span>
               </div>
             </a>
           </article>
@@ -1213,7 +1213,7 @@
                 </svg>
               </div>
               <div class="card__text-wrapper">
-                <h3 class="card__title">Приёмная комиссия МАИ</h3>
+                <h3 class="card__title">Приёмная комиссия</h3>
               </div>
             </a>
           </article>
@@ -1625,7 +1625,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
