Update semantic of the "manuals" page

--- a/manuals.html
+++ b/manuals.html
@@ -37,45 +37,45 @@
         <h1 class="about__title">Справочник</h1>
         <p class="about__content">Статьи для решения различных вопросов</p>
       </section>
-      <section class="menu">
-        <h2 class="menu__title">Все статьи</h2>
-        <nav class="menu__content">
-          <ul class="menu__content-list menu__content-list--manuals">
-            <li class="menu__content-item">
-              <a class="menu-card" href="./manuals/exams.html">
-                <img class="menu-card__icon" src="./icons/manuals/exams.svg" alt="" width="100" height="100"/>
-                <h3 class="menu-card__title">Экзамены</h2>
-                <p class="menu-card__description">
+      <section class="catalog">
+        <h2 class="catalog__title">Все статьи</h2>
+        <nav class="catalog__content">
+          <ul class="catalog__list">
+            <li class="catalog__item">
+              <a class="card card--menu" href="./manuals/exams.html">
+                <img class="card__icon" src="./icons/manuals/exams.svg" alt="" width="100" height="100"/>
+                <h3 class="card__title">Экзамены</h2>
+                <p class="card__description">
                   Как и в каких случаях можно продлить сессию, как подать апелляцию в случае несогласия с оценкой за экзамен
                 </p>
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="./manuals/exits.html">
-                <img class="menu-card__icon" src="./icons/manuals/exits.svg" alt="" width="100" height="100"/>
-                <h3 class="menu-card__title">Отчисления и академический отпуск</h2>
-                <p class="menu-card__description">Как и когда можно прекратить или приостановить обучение</p>
+              <a class="card card--menu" href="./manuals/exits.html">
+                <img class="card__icon" src="./icons/manuals/exits.svg" alt="" width="100" height="100"/>
+                <h3 class="card__title">Отчисления и академический отпуск</h2>
+                <p class="card__description">Как и когда можно прекратить или приостановить обучение</p>
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="./manuals/money.html">
-                <img class="menu-card__icon" src="./icons/manuals/money.svg" alt="" width="100" height="100"/>
-                <h3 class="menu-card__title">Деньги</h2>
-                <p class="menu-card__description">Как и какие денежные средства можно получить от вуза</p>
+              <a class="card card--menu" href="./manuals/money.html">
+                <img class="card__icon" src="./icons/manuals/money.svg" alt="" width="100" height="100"/>
+                <h3 class="card__title">Деньги</h2>
+                <p class="card__description">Как и какие денежные средства можно получить от вуза</p>
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="./manuals/organizations.html">
-                <img class="menu-card__icon" src="./icons/manuals/organizations.svg" alt="" width="100" height="100"/>
-                <h3 class="menu-card__title">Организации</h2>
-                <p class="menu-card__description">Перечень подразделений вуза и их деятельность</p>
+              <a class="card card--menu" href="./manuals/organizations.html">
+                <img class="card__icon" src="./icons/manuals/organizations.svg" alt="" width="100" height="100"/>
+                <h3 class="card__title">Организации</h2>
+                <p class="card__description">Перечень подразделений вуза и их деятельность</p>
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="./manuals/union.html">
-                <img class="menu-card__icon" src="./icons/manuals/union.svg" alt="" width="100" height="100"/>
-                <h3 class="menu-card__title">Профсоюз</h2>
-                <p class="menu-card__description">
+              <a class="card card--menu" href="./manuals/union.html">
+                <img class="card__icon" src="./icons/manuals/union.svg" alt="" width="100" height="100"/>
+                <h3 class="card__title">Профсоюз</h2>
+                <p class="card__description">
                   Преимущества и обязаности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него, выбор и обязанности профорга
                 </p>
               </a>
