--- a/index.html
+++ b/index.html
@@ -41,32 +41,32 @@
           материалов для самообразования и справочников по различным вопросам.
         </p>
       </section>
-      <section class="catalog">
-        <h2 class="catalog__title">Разделы</h2>
-        <nav class="catalog__content">
-          <ul class="catalog__list catalog__list--index">
-            <li class="catalog__item">
+      <section class="catalog-group">
+        <h2 class="catalog-group__title"></h2>
+        <nav class="catalog-group__content">
+          <ul class="catalog-group__list catalog-group__list--index">
+            <li class="catalog-group__item">
               <a class="card card--menu" href="./services.html">
                 <img class="card__icon" src="./icons/index/services.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Сервисы</h3>
                 <p class="card__description">Цифровые инструменты вуза для образования</p>
               </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog-group__item">
               <a class="card card--menu" href="./organizations.html">
                 <img class="card__icon" src="./icons/index/organizations.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Организации</h3>
                 <p class="card__description">Информационные ресурсы подразделений вуза</p>
               </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog-group__item">
               <a class="card card--menu" href="./manuals.html">
                 <img class="card__icon" src="./icons/index/manuals.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Справочник</h3>
                 <p class="card__description">Статьи для решения различных вопросов</p>
               </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog-group__item">
               <a class="card card--menu" href="./self-education.html">
                 <img class="card__icon" src="./icons/index/self-education.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Самообразование</h3>
