--- a/manuals.html
+++ b/manuals.html
@@ -37,11 +37,11 @@
         <h1 class="about__title">Справочник</h1>
         <p class="about__content">Статьи для решения различных вопросов</p>
       </section>
-      <section class="catalog">
-        <h2 class="catalog__title">Все статьи</h2>
-        <nav class="catalog__content">
-          <ul class="catalog__list">
-            <li class="catalog__item">
+      <section class="catalog-group">
+        <h2 class="catalog-group__title">Все статьи</h2>
+        <nav class="catalog-group__content">
+          <ul class="catalog-group__list">
+            <li class="catalog-group__item">
               <a class="card card--menu" href="./manuals/exams.html">
                 <img class="card__icon" src="./icons/manuals/exams.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Экзамены</h2>
