--- a/services.html
+++ b/services.html
@@ -38,118 +38,81 @@
         <p class="about__content">Цифровые инструменты вуза для образования</p>
       </section>
       <section class="catalog">
-        <h2 class="catalog__title">Все сервисы</h2>
+        <h2 class="catalog__title visually-hidden">Каталог</h2>
         <div class="catalog__content">
-          <article class="catalog__item">
-            <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
-              <div class="card__icon-wrapper" title="Сайт">
-                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
-                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
-                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
-                </svg>
-              </div>
-              <div class="card__text-wrapper">
-                <h3 class="card__title">Личный кабинет</h3>
-                <span class="card__description">Профиль, оценки, расписание, документы, услуги</span>
-              </div>
-            </a>
-          </article>
-          <article class="catalog__item">
-            <a class="card" href="https://mail.mai.education" target="_blank">
-              <div class="card__icon-wrapper" title="Сайт">
-                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
-                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
-                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
-                </svg>
-              </div>
-              <div class="card__text-wrapper">
-                <h3 class="card__title">Электронная почта</h3>
-                <span class="card__description">@mai.education</span>
-              </div>
-            </a>
-          </article>
-          <article class="catalog__item">
-            <a class="card" href="https://lms.mai.ru" target="_blank">
-              <div class="card__icon-wrapper" title="Сайт">
-                <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
-                  <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
-                  <path d="m13.25 2.75-5.5 5.5m3-6.5h3.5v3.5"/>
-                </svg>
-              </div>
-              <div class="card__text-wrapper">
-                <h3 class="card__title">Система электронного обучения</h3>
-                <span class="card__description">Онлайн-курсы по некоторым дисциплинам</span>
-              </div>
-            </a>
-          </article>
-          <article class="catalog__item">
-            <a class="card card--telegram" href="https://t.me/mai_timetablebot" target="_blank">
-              <div class="card__icon-wrapper" title="Telegram">
-                <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <defs>
-                    <linearGradient x1="50%" y1="0%" x2="50%" y2="99.2583404%" id="linearGradient-1">
-                      <stop stop-color="#2AABEE" offset="0%"></stop>
-                      <stop stop-color="#229ED9" offset="100%"></stop>
-                    </linearGradient>
-                  </defs>
-                  <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <circle id="Oval" fill="url(#linearGradient-1)" cx="500" cy="500" r="500"></circle>
-                    <path d="M226.328419,494.722069 C372.088573,431.216685 469.284839,389.350049 517.917216,369.122161 C656.772535,311.36743 685.625481,301.334815 704.431427,301.003532 C708.567621,300.93067 717.815839,301.955743 723.806446,306.816707 C728.864797,310.92121 730.256552,316.46581 730.922551,320.357329 C731.588551,324.248848 732.417879,333.113828 731.758626,340.040666 C724.234007,419.102486 691.675104,610.964674 675.110982,699.515267 C668.10208,736.984342 654.301336,749.547532 640.940618,750.777006 C611.904684,753.448938 589.856115,731.588035 561.733393,713.153237 C517.726886,684.306416 492.866009,666.349181 450.150074,638.200013 C400.78442,605.66878 432.786119,587.789048 460.919462,558.568563 C468.282091,550.921423 596.21508,434.556479 598.691227,424.000355 C599.00091,422.680135 599.288312,417.758981 596.36474,415.160431 C593.441168,412.561881 589.126229,413.450484 586.012448,414.157198 C581.598758,415.158943 511.297793,461.625274 375.109553,553.556189 C355.154858,567.258623 337.080515,573.934908 320.886524,573.585046 C303.033948,573.199351 268.692754,563.490928 243.163606,555.192408 C211.851067,545.013936 186.964484,539.632504 189.131547,522.346309 C190.260287,513.342589 202.659244,504.134509 226.328419,494.722069 Z" id="Path-3" fill="#FFFFFF"></path>
-                  </g>
-                </svg>
-                <span class="card__type">бот</span>
-              </div>
-              <div class="card__text-wrapper">
-                <h3 class="card__title">Расписание v2.0</h3>
-                <span class="card__description">Расписание занятий и план-схема кампуса</span>
-              </div>
-            </a>
-          </article>
-          <article class="catalog__item">
-            <a class="card card--telegram" href="https://t.me/Timetable_MAI_bot" target="_blank">
-              <div class="card__icon-wrapper" title="Telegram">
-                <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <defs>
-                    <linearGradient x1="50%" y1="0%" x2="50%" y2="99.2583404%" id="linearGradient-1">
-                      <stop stop-color="#2AABEE" offset="0%"></stop>
-                      <stop stop-color="#229ED9" offset="100%"></stop>
-                    </linearGradient>
-                  </defs>
-                  <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <circle id="Oval" fill="url(#linearGradient-1)" cx="500" cy="500" r="500"></circle>
-                    <path d="M226.328419,494.722069 C372.088573,431.216685 469.284839,389.350049 517.917216,369.122161 C656.772535,311.36743 685.625481,301.334815 704.431427,301.003532 C708.567621,300.93067 717.815839,301.955743 723.806446,306.816707 C728.864797,310.92121 730.256552,316.46581 730.922551,320.357329 C731.588551,324.248848 732.417879,333.113828 731.758626,340.040666 C724.234007,419.102486 691.675104,610.964674 675.110982,699.515267 C668.10208,736.984342 654.301336,749.547532 640.940618,750.777006 C611.904684,753.448938 589.856115,731.588035 561.733393,713.153237 C517.726886,684.306416 492.866009,666.349181 450.150074,638.200013 C400.78442,605.66878 432.786119,587.789048 460.919462,558.568563 C468.282091,550.921423 596.21508,434.556479 598.691227,424.000355 C599.00091,422.680135 599.288312,417.758981 596.36474,415.160431 C593.441168,412.561881 589.126229,413.450484 586.012448,414.157198 C581.598758,415.158943 511.297793,461.625274 375.109553,553.556189 C355.154858,567.258623 337.080515,573.934908 320.886524,573.585046 C303.033948,573.199351 268.692754,563.490928 243.163606,555.192408 C211.851067,545.013936 186.964484,539.632504 189.131547,522.346309 C190.260287,513.342589 202.659244,504.134509 226.328419,494.722069 Z" id="Path-3" fill="#FFFFFF"></path>
-                  </g>
-                </svg>
-                <span class="card__type">бот</span>
-              </div>
-              <div class="card__text-wrapper">
-                <h3 class="card__title">Расписание</h3>
-                <span class="card__description">Расписание занятий, отзывы на преподавателей, поиск свободной аудитории</span>
-              </div>
-            </a>
-          </article>
-          <article class="catalog__item">
-            <a class="card card--telegram" href="https://t.me/maiuniversity_schedule_bot" target="_blank">
-              <div class="card__icon-wrapper" title="Telegram">
-                <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <defs>
-                    <linearGradient x1="50%" y1="0%" x2="50%" y2="99.2583404%" id="linearGradient-1">
-                      <stop stop-color="#2AABEE" offset="0%"></stop>
-                      <stop stop-color="#229ED9" offset="100%"></stop>
-                    </linearGradient>
-                  </defs>
-                  <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <circle id="Oval" fill="url(#linearGradient-1)" cx="500" cy="500" r="500"></circle>
-                    <path d="M226.328419,494.722069 C372.088573,431.216685 469.284839,389.350049 517.917216,369.122161 C656.772535,311.36743 685.625481,301.334815 704.431427,301.003532 C708.567621,300.93067 717.815839,301.955743 723.806446,306.816707 C728.864797,310.92121 730.256552,316.46581 730.922551,320.357329 C731.588551,324.248848 732.417879,333.113828 731.758626,340.040666 C724.234007,419.102486 691.675104,610.964674 675.110982,699.515267 C668.10208,736.984342 654.301336,749.547532 640.940618,750.777006 C611.904684,753.448938 589.856115,731.588035 561.733393,713.153237 C517.726886,684.306416 492.866009,666.349181 450.150074,638.200013 C400.78442,605.66878 432.786119,587.789048 460.919462,558.568563 C468.282091,550.921423 596.21508,434.556479 598.691227,424.000355 C599.00091,422.680135 599.288312,417.758981 596.36474,415.160431 C593.441168,412.561881 589.126229,413.450484 586.012448,414.157198 C581.598758,415.158943 511.297793,461.625274 375.109553,553.556189 C355.154858,567.258623 337.080515,573.934908 320.886524,573.585046 C303.033948,573.199351 268.692754,563.490928 243.163606,555.192408 C211.851067,545.013936 186.964484,539.632504 189.131547,522.346309 C190.260287,513.342589 202.659244,504.134509 226.328419,494.722069 Z" id="Path-3" fill="#FFFFFF"></path>
-                  </g>
-                </svg>
-                <span class="card__type">мини</span>
-              </div>
-              <div class="card__text-wrapper">
-                <h3 class="card__title">Расписание</h3>
-                <span class="card__description">Расписание занятий</span>
-              </div>
-            </a>
+          <article class="catalog-group">
+            <h3 class="catalog-group__title">Все сервисы</h3>
+            <ul class="catalog-group__list">
+              <li class="catalog-group__item">
+                <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
+                  <div class="card__icon-wrapper" title="Сайт">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Личный кабинет</h4>
+                    <span class="card__description">Профиль, оценки, расписание, документы, услуги</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://mail.mai.education" target="_blank">
+                  <div class="card__icon-wrapper" title="Сайт">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Электронная почта</h4>
+                    <span class="card__description">@mai.education</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://lms.mai.ru" target="_blank">
+                  <div class="card__icon-wrapper" title="Сайт">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Система электронного обучения</h4>
+                    <span class="card__description">Онлайн-курсы по некоторым дисциплинам</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/mai_timetablebot" target="_blank">
+                  <div class="card__icon-wrapper" title="Telegram">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">бот</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Расписание v2.0</h4>
+                    <span class="card__description">Расписание занятий и план-схема кампуса</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/Timetable_MAI_bot" target="_blank">
+                  <div class="card__icon-wrapper" title="Telegram">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">бот</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Расписание</h4>
+                    <span class="card__description">Расписание занятий, отзывы на преподавателей, поиск свободной аудитории</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/maiuniversity_schedule_bot" target="_blank">
+                  <div class="card__icon-wrapper" title="Telegram">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">мини</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Расписание</h4>
+                    <span class="card__description">Расписание занятий</span>
+                  </div>
+                </a>
+              </li>
+            </ul>
           </article>
         </div>
       </section>
