--- a/manuals/exams.html
+++ b/manuals/exams.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Справочник | mai_library — сборник материалов для маёвца</title>
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="../normalize.css"/>
     <link rel="stylesheet" href="../styles.css"/>
   </head>
