Fix title for menu section in "index" page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
       </section>
       <section class="catalog-group">
-        <h2 class="catalog-group__title"></h2>
+        <h2 class="catalog-group__title">Разделы</h2>
         <nav class="catalog-group__content">
           <ul class="catalog-group__list catalog-group__list--index">
             <li class="catalog-group__item">
