--- a/manuals/money.html
+++ b/manuals/money.html
@@ -124,7 +124,7 @@
                   в квартал на карты платёжной системы "МИР".
                 </li>
                 <li>Пакет документов можно подать лично сотруднику Профбюро или оставить в ящике на двери кабинета.</li>
-                <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
+                <li><a class="link" href="https://mai.ru/campus/360/welfare">Подробно</a></li>
               </ul>
             </div>
             <div>
@@ -133,7 +133,7 @@
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
                 <li>Размер выплаты зависит от категории, выплачивается 1 раз в семестр.</li>
                 <li>Заявление можно подать только лично сотруднику Профбюро, так как необходима регистрация в журнале подачи.</li>
-                <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
+                <li><a class="link" href="https://mai.ru/campus/360/welfare">Подробно</a></li>
               </ul>
             </div>
             <div>
@@ -142,7 +142,7 @@
                 <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства. </li>
                 <li>Сумма выплаты зависит от категории. </li>
                 <li>Заявления и документы принимает бухгалтерия Профкома МАИ.</li>
-                <li>Подробно <a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">в статье в сообществе ВКонтакте Профкома МАИ</a>.</li>
+                <li><a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">Подробно</a></li>
               </ul>
             </div>
             <div>
