Delete link for "MTC" address in "organizations" manual
MTC — military training center

--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -99,11 +99,7 @@
               </tr>
               <tr>
                 <td>Военно-учётный стол</td>
-                <td>
-                  <a class="link" href="https://yandex.ru/maps/-/CHRTJG5p" target="_blank">
-                    улица Дубосековская, дом 5
-                  </a>, комната 203
-                </td>
+                <td>улица Дубосековская, дом 5, комната 203</td>
                 <td>Оформление справки об отсрочке</td>
               </tr>
               <tr>
