Fix table caption and her head data in "money" manual

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -52,11 +52,11 @@
             </div>
             <div class="table-wrapper">
               <table>
-                <caption>Виды</caption>
+                <caption>Перечень</caption>
                 <thead>
                   <tr>
-                    <th>Тип</th>
-                    <th>Подвиды / Особенности</th>
+                    <th>Вид</th>
+                    <th>Подвиды</th>
                   </tr>
                 </thead>
                 <tbody>
