Update description for "money" manual

--- a/manuals.html
+++ b/manuals.html
@@ -62,7 +62,7 @@
               <a class="card card--menu" href="./manuals/money.html">
                 <img class="card__icon" src="./icons/manuals/money.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Деньги</h2>
-                <p class="card__description">Как и какие денежные средства можно получить от вуза</p>
+                <p class="card__description">Какие стипендии и материалые поддержки существуют и как их получить</p>
               </a>
             </li>
             <li class="menu__content-item">
