--- a/manuals/money.html
+++ b/manuals/money.html
@@ -36,7 +36,7 @@
     <main>
       <section class="about">
         <h1 class="about__title">Справочник: деньги</h1>
-        <p class="about__content">Как и какие денежные средства можно получить от вуза</p>
+        <p class="about__content">Какие стипендии и материалые поддержки существуют и как их получить</p>
       </section>
       <section class="manual">
         <article class="manual-part">
