--- a/manuals.html
+++ b/manuals.html
@@ -69,7 +69,9 @@
               <a class="card card--menu" href="./manuals/organizations.html">
                 <img class="card__icon" src="./icons/manuals/organizations.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Организации</h2>
-                <p class="card__description">Перечень подразделений вуза и их деятельность</p>
+                <p class="card__description">
+                  Перечень популярных и необходимых подразделений вуза с их местоположениями и деятельностями
+                </p>
               </a>
             </li>
             <li class="menu__content-item">
