--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -36,7 +36,7 @@
     <main>
       <section class="about">
         <h1 class="about__title">Справочник: организации</h1>
-        <p class="about__content">Перечень подразделений вуза и их деятельность</p>
+        <p class="about__content">Перечень популярных и необходимых подразделений вуза с их местоположениями и деятельностями</p>
       </section>
       <section class="manual">
         <div class="table-wrapper">
