Fix description for "union" manual

--- a/manuals.html
+++ b/manuals.html
@@ -79,7 +79,8 @@
                 <img class="card__icon" src="./icons/manuals/union.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Профсоюз</h2>
                 <p class="card__description">
-                  Преимущества и обязаности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него, выбор и обязанности профорга
+                  Преимущества и обязанности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него,
+                  выбор и обязанности профорга
                 </p>
               </a>
             </li>
