--- a/manuals/union.html
+++ b/manuals/union.html
@@ -37,7 +37,7 @@
       <section class="about">
         <h1 class="about__title">Справочник: Профсоюз</h1>
         <p class="about__content">
-          Преимущества и обязаности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него,
+          Преимущества и обязанности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него,
           выбор и обязанности профорга
         </p>
       </section>
