Fix content in "manuals" pages (#42)
* Change names of links in "money" manual

* Delete link for "MTC" address in "organizations" manual
MTC — military training center

* Fix table caption and her head data in "money" manual

* Update description for "money" manual

* Update description for "organizations" manual

* Delete table caption in "organizations" manual

* Fix description for "union" manual

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -36,7 +36,7 @@
     <main>
       <section class="about">
         <h1 class="about__title">Справочник: деньги</h1>
-        <p class="about__content">Как и какие денежные средства можно получить от вуза</p>
+        <p class="about__content">Какие стипендии и материалые поддержки существуют и как их получить</p>
       </section>
       <section class="manual">
         <article class="manual-part">
@@ -52,11 +52,11 @@
             </div>
             <div class="table-wrapper">
               <table>
-                <caption>Виды</caption>
+                <caption>Перечень</caption>
                 <thead>
                   <tr>
-                    <th>Тип</th>
-                    <th>Подвиды / Особенности</th>
+                    <th>Вид</th>
+                    <th>Подвиды</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -124,7 +124,7 @@
                   в квартал на карты платёжной системы "МИР".
                 </li>
                 <li>Пакет документов можно подать лично сотруднику Профбюро или оставить в ящике на двери кабинета.</li>
-                <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
+                <li><a class="link" href="https://mai.ru/campus/360/welfare">Подробно</a></li>
               </ul>
             </div>
             <div>
@@ -133,7 +133,7 @@
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
                 <li>Размер выплаты зависит от категории, выплачивается 1 раз в семестр.</li>
                 <li>Заявление можно подать только лично сотруднику Профбюро, так как необходима регистрация в журнале подачи.</li>
-                <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
+                <li><a class="link" href="https://mai.ru/campus/360/welfare">Подробно</a></li>
               </ul>
             </div>
             <div>
@@ -142,7 +142,7 @@
                 <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства. </li>
                 <li>Сумма выплаты зависит от категории. </li>
                 <li>Заявления и документы принимает бухгалтерия Профкома МАИ.</li>
-                <li>Подробно <a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">в статье в сообществе ВКонтакте Профкома МАИ</a>.</li>
+                <li><a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">Подробно</a></li>
               </ul>
             </div>
             <div>
