--- a/manuals.html
+++ b/manuals.html
@@ -62,14 +62,16 @@
               <a class="card card--menu" href="./manuals/money.html">
                 <img class="card__icon" src="./icons/manuals/money.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Деньги</h2>
-                <p class="card__description">Как и какие денежные средства можно получить от вуза</p>
+                <p class="card__description">Какие стипендии и материалые поддержки существуют и как их получить</p>
               </a>
             </li>
             <li class="menu__content-item">
               <a class="card card--menu" href="./manuals/organizations.html">
                 <img class="card__icon" src="./icons/manuals/organizations.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Организации</h2>
-                <p class="card__description">Перечень подразделений вуза и их деятельность</p>
+                <p class="card__description">
+                  Перечень популярных и необходимых подразделений вуза с их местоположениями и деятельностями
+                </p>
               </a>
             </li>
             <li class="menu__content-item">
@@ -77,7 +79,8 @@
                 <img class="card__icon" src="./icons/manuals/union.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Профсоюз</h2>
                 <p class="card__description">
-                  Преимущества и обязаности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него, выбор и обязанности профорга
+                  Преимущества и обязанности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него,
+                  выбор и обязанности профорга
                 </p>
               </a>
             </li>
