--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -36,12 +36,11 @@
     <main>
       <section class="about">
         <h1 class="about__title">Справочник: организации</h1>
-        <p class="about__content">Перечень подразделений вуза и их деятельность</p>
+        <p class="about__content">Перечень популярных и необходимых подразделений вуза с их местоположениями и деятельностями</p>
       </section>
       <section class="manual">
         <div class="table-wrapper">
           <table>
-            <caption>Таблица организаций</caption>
             <thead>
               <tr>
                 <th>Название</th>
@@ -99,11 +98,7 @@
               </tr>
               <tr>
                 <td>Военно-учётный стол</td>
-                <td>
-                  <a class="link" href="https://yandex.ru/maps/-/CHRTJG5p" target="_blank">
-                    улица Дубосековская, дом 5
-                  </a>, комната 203
-                </td>
+                <td>улица Дубосековская, дом 5, комната 203</td>
                 <td>Оформление справки об отсрочке</td>
               </tr>
               <tr>
