Fix description of the "Yandex Education" link

--- a/self-education.html
+++ b/self-education.html
@@ -176,7 +176,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Яндекс Образование</h4>
-                    <span class="card__description">Это проекты и инициативы для развития компетенций в мире технологий</span>
+                    <span class="card__description">Проекты и инициативы для развития компетенций в мире технологий</span>
                   </div>
                 </a>
               </li>
