Add 2 new links to "services"

--- a/services.html
+++ b/services.html
@@ -113,6 +113,32 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card" href="https://platforma.mai.ru/" target="_blank">
+                  <div class="card__icon-wrapper" title="Сайт">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Цифровая кадровая платформа</h4>
+                    <span class="card__description">
+                      Цифровая среда, позволяющая, сформировать и реализовать
+                      индивидуальную образовательную и карьерную траекторию
+                    </span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/inetmai" target="_blank">
+                  <div class="card__icon-wrapper" title="Telegram">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Интернет</h4>
+                    <span class="card__description">Информационный канал для пользователей интернета на территории общежитий</span>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
         </div>
