Delete title atribute for icon-wrapper in "services"

--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -57,7 +57,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://mail.mai.education" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -68,7 +68,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://lms.mai.ru" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -79,7 +79,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/mai_timetablebot" target="_blank">
-                  <div class="card__icon-wrapper" title="Telegram">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
                     <span class="card__type">бот</span>
                   </div>
@@ -91,7 +91,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/Timetable_MAI_bot" target="_blank">
-                  <div class="card__icon-wrapper" title="Telegram">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
                     <span class="card__type">бот</span>
                   </div>
@@ -103,7 +103,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/maiuniversity_schedule_bot" target="_blank">
-                  <div class="card__icon-wrapper" title="Telegram">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
                     <span class="card__type">мини</span>
                   </div>
@@ -115,7 +115,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card" href="https://platforma.mai.ru/" target="_blank">
-                  <div class="card__icon-wrapper" title="Сайт">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
@@ -129,7 +129,7 @@
               </li>
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/inetmai" target="_blank">
-                  <div class="card__icon-wrapper" title="Telegram">
+                  <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
                     <span class="card__type">канал</span>
                   </div>
