Fix description for "Digital HR platform" in "services"

--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Цифровая кадровая платформа</h4>
                     <span class="card__description">
-                      Цифровая среда, позволяющая, сформировать и реализовать
+                      Цифровая среда, позволяющая сформировать и реализовать
                       индивидуальную образовательную и карьерную траекторию
                     </span>
                   </div>
